Added easier nav

--- a/application/templates/base.html
+++ b/application/templates/base.html
@@ -18,8 +18,17 @@
                     <div id="navbarMenuHeroA" class="navbar-menu">
                         <div class="navbar-end">
              
+                            <a href="{{ url_for('bp.home') }}" class="navbar-item">
+                                Home
+                            </a>
                             <a href="{{ url_for('auth.login') }}" class="navbar-item">
                                 Login
+                            </a>
+                            <a href="{{ url_for('auth.logout') }}" class="navbar-item">
+                                Logout
+                            </a>
+                            <a href="{{ url_for('bp.incident_list') }}" class="navbar-item">
+                                Incidents
                             </a>
    
                         </div>
