Add /incident/create endpoint

--- a/application/templates/base.html
+++ b/application/templates/base.html
@@ -30,6 +30,9 @@
                             <a href="{{ url_for('bp.incident_list') }}" class="navbar-item">
                                 Incidents
                             </a>
+                            <a href="{{ url_for('bp.incident_create') }}" class="navbar-item">
+                                Create
+                            </a>
    
                         </div>
                     </div>
