--- a/application/templates/create_incident.html
+++ b/application/templates/create_incident.html
@@ -7,6 +7,13 @@
         <form method="POST"">
             <div class="field">
                 <div class="control">
+                    <label for="callerid">Caller ID *</label>
+                    <input class="input is-large" type="callerid" name="callerid" value={{callerid}} autofocus="" disabled>
+                </div>
+            </div>
+
+            <div class="field">
+                <div class="control">
                     <label for="short-description">Short Description *</label>
                     <textarea class="textarea" name="short-description" rows=2 placeholder="A short description of your issue" required></textarea>
                 </div>
